# JetsonCar-ROS

./: .gitignore  99-jetsoncar.rules  ConnectJetsonSSH.sh  ConnectROS.sh  LICENSE  PrepareHostROS.sh  README.md  jetsoncar.service  startup_launch.sh
jetsoncar_bringup/: CMakeLists.txt  README.md  package.xml
jetsoncar_bringup/launch/: minimal.launch  simulation.launch  simulation_rgbd.launch
jetsoncar_description/: CMakeLists.txt  README.md  package.xml
jetsoncar_description/rviz/: tf_display.rviz
jetsoncar_description/urdf/: jetsoncar.xacro  joints.xacro  parameters.xacro  physical.xacro
jetsoncar_driver/: CMakeLists.txt  package.xml  setup.py
jetsoncar_driver/cfg/: Parameters.cfg  TestParameters.cfg
jetsoncar_driver/config/: rosconsole.conf
jetsoncar_driver/include/jetsoncar_driver/: ackermann_kinematics.hpp  odometry.h
jetsoncar_driver/launch/: driver.launch  odometry.launch  teleop.launch
jetsoncar_driver/libs/lspc/: MessageTypes.h
jetsoncar_driver/libs/utils/: CMakeLists.txt  utils.cpp  utils.hpp
jetsoncar_driver/scripts/: keyboard_teleop.py  teleop.py
jetsoncar_driver/src/: odometry.cpp  odometry_node.cpp  test_node.cpp
jetsoncar_launch/: CMakeLists.txt  package.xml
jetsoncar_launch/launch/: joystick.launch  rviz.launch  teleop.launch
jetsoncar_mapping/: CMakeLists.txt  package.xml
jetsoncar_mapping/launch/: gmapping.launch
jetsoncar_msgs/: CMakeLists.txt  package.xml
jetsoncar_msgs/msg/: Encoders.msg  Setpoint.msg
jetsoncar_srvs/: CMakeLists.txt  package.xml
jetsoncar_srvs/srv/: SetPID.srv
(+5 files in other folders)
